<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/fondocomprobante"
    android:orientation="vertical"
    tools:context=".ui.ComprobanteVentaActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_weight="0"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/exito" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_weight="0"
        android:fontFamily="@font/cabin_bold"
        android:text="@string/textproceso"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="0"
        android:fontFamily="@font/cabin_bold"
        android:text="@string/textpedido"
        android:textAlignment="center"
        android:textColor="#353535"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="3dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/tiempo" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="0"
            android:fontFamily="@font/cabin_bold"
            android:text="@string/textiempo"
            android:textAlignment="viewStart"
            android:textColor="#004aad"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="0"
            android:fontFamily="@font/cabin_bold"
            android:text="@string/textminutos"
            android:textColor="#004aad"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnFinalizarp"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="0"
        android:backgroundTint="#922a2a"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/textcomprobante"
        android:textStyle="bold"
        app:cornerRadius="16sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logocurrulo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_weight="0"
        android:fontFamily="@font/cabin_bold"
        android:text="@string/textcomprahecha"
        android:textAlignment="center"
        android:textColor="#353535"
        android:textSize="17sp" />

</LinearLayout>