<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.PagoPedidoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:background="@drawable/topback"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="Pago"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundscreens">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/backgroundscreens">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/textdppagar"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#BEC6C4C4"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/textfentrega"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:text="DELIVERY"
                    android:textAlignment="center"
                    android:textColor="#922A2A"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home_white"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:id="@+id/textView291"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="9dp"
                    android:text="@string/textdentrega"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDireccion"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                app:startIconDrawable="@drawable/baseline_domain_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietDireccion"
                    android:layout_width="366dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:hint="Dirección" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCelular"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="6dp"
                    app:startIconDrawable="@drawable/baseline_phone_iphone_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietCelular"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:hint="Celular"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilTelefono"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginBottom="4dp"
                    app:startIconDrawable="@drawable/baseline_phone_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietTelefono"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:hint="Teléfono Fijo"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilComentarios"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="17dp"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:errorEnabled="true"

                app:startIconDrawable="@drawable/baseline_mode_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietComentarios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:hint="Comentarios" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="11dp"
                android:background="#BEC6C4C4"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bolsa_compras"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:text="@string/textmpago"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerMetodo"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#BEC6C4C4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="Comprobante de Venta"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/btnFactura"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Factura"
                        android:textSize="15sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/btnBoleta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Boleta"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="19dp"
                android:background="#BEC6C4C4"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="Monto Total a Cancelar"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilMonto"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="10dp"
                    app:startIconDrawable="@drawable/baseline_money_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietMonto"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="6dp"
                        android:hint="Monto"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/chkPromociones"
                android:layout_width="383dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/textpdescuentos"
                app:buttonTint="#FDFDFD" />

            <CheckBox
                android:id="@+id/chkTerminos"
                android:layout_width="383dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="8dp"
                android:text="@string/texttcondiciones"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp"
                app:buttonTint="#FDFDFD" />

            <Button
                android:id="@+id/btnFinalizarc"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="#922A2A"
                android:text="Pagar"
                android:textSize="17sp"
                android:textStyle="bold"
                app:cornerRadius="14sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>